My Journey learning

--- a/pratek.html
+++ b/pratek.html
@@ -32,6 +32,9 @@
         opacity: 0;
         animation: fadeIn 0.5s forwards; /* fadeIn nama sesuai keyFrame */
       }
+      .active {
+        opacity: 0.5;
+      }
       .container {
         width: 600px;
         margin: 10px auto;
