--- a/DOM-Manipulasi/dom.html
+++ b/DOM-Manipulasi/dom.html
@@ -45,7 +45,7 @@
         </ul>
       </section>
     </div>
-
-    <script src="dom.js"></script>
+    <img src="hello" alt="" />
+    <script src="../DOM-Manipulasi/dom.js"></script>
   </body>
 </html>
